[metadata]
name = mbmutils
version = 1.2.0
author = Matt Maher
author_email = matt@maher-family.net
description = Developer's tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bladnman/mbmutils
project_urls =
    Bug Tracker = https://github.com/bladnman/mbmutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = mbmutils

[options.extras_require]
test =
    pytest
    coverage